WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49484
Some FrameLoader.h Cleanup
https://bugs.webkit.org/show_bug.cgi?id=49484
Summary
Some FrameLoader.h Cleanup
Joseph Pecoraro
Reported
2010-11-12 16:28:27 PST
Cleanup some unimplemented functions and unused variables.
Attachments
[PATCH] Proposed Change
(5.79 KB, patch)
2010-11-12 16:40 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2010-11-12 16:40:45 PST
Created
attachment 73791
[details]
[PATCH] Proposed Change Removed unimplemented functions and an unused debug variable.
Alexey Proskuryakov
Comment 2
2010-11-12 16:59:58 PST
Comment on
attachment 73791
[details]
[PATCH] Proposed Change View in context:
https://bugs.webkit.org/attachment.cgi?id=73791&action=review
> WebCore/ChangeLog:23 > + Removed function signatures without any implementation. The functions > + used to exist, and were nicely refactored into PageCache in
r60688
and > + the signatures were left behind. > + > + Removed function signature setLoadType. Added in
r17238
back when the > + file was named WebFrameLoader, and the implementation was lost during > + the transition from its mm implementation. > + > + Removed function signature updateHistoryAfterClientRedirect. Implementation > + and call points were removed in
r18541
but the signature was left behind, > + and jumped files! > + > + Removed unused debug variable m_didDispatchDidCommitLoad. It was added > + and used in Assertions in
r28399
. It was removed soon after, in
r28464
> + because they were, "firing like crazy. Not sure why yet." It was > + never used again.
I'd probably put this in the bug, not ChangeLog. But it's nothing compared to the fact that you actually investigated the history in such detail, that's really nice.
WebKit Commit Bot
Comment 3
2010-11-12 17:37:13 PST
The commit-queue encountered the following flaky tests while processing
attachment 73791
[details]
: http/tests/appcache/insert-html-element-with-manifest-2.html Please file bugs against the tests. These tests were authored by
ap@webkit.org
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2010-11-12 17:40:03 PST
Comment on
attachment 73791
[details]
[PATCH] Proposed Change Clearing flags on attachment: 73791 Committed
r71959
: <
http://trac.webkit.org/changeset/71959
>
WebKit Commit Bot
Comment 5
2010-11-12 17:40:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug