2010-11-12  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by Alexey Proskuryakov.

        Some FrameLoader.h Cleanup
        https://bugs.webkit.org/show_bug.cgi?id=49484

        Removed function signatures without any implementation. The functions
        used to exist, and were nicely refactored into PageCache in r60688 and
        the signatures were left behind.

        Removed function signature setLoadType. Added in r17238 back when the
        file was named WebFrameLoader, and the implementation was lost during
        the transition from its mm implementation.

        Removed function signature updateHistoryAfterClientRedirect. Implementation
        and call points were removed in r18541 but the signature was left behind,
        and jumped files!

        Removed unused debug variable m_didDispatchDidCommitLoad. It was added
        and used in Assertions in r28399. It was removed soon after, in r28464
        because they were, "firing like crazy. Not sure why yet." It was
        never used again.

        Added const qualifier and moved interruptionForPolicyChangeError to
        be more like its buddies.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::FrameLoader):
        (WebCore::FrameLoader::checkLoadCompleteForThisFrame):
        (WebCore::FrameLoader::interruptionForPolicyChangeError):
        (WebCore::FrameLoader::dispatchDidCommitLoad):
        * loader/FrameLoader.h:

Canonical link: https://commits.webkit.org/62430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71959 268f45cc-cd09-0410-ab3c-d52691b4dbfc